adding build option, read the how_to_build.md for more informations